Premier passage de clean, faudra ajouter des commentaires ( PAS BEAUCOUP ) + Readme et changer votre java en java 8 pour tester