@@ -1,20 +1,2 @@
 #!/bin/bash
-java \
-    --add-opens=java.base/java.lang=ALL-UNNAMED \
-    --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
-    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
-    --add-opens=java.base/java.io=ALL-UNNAMED \
-    --add-opens=java.base/java.net=ALL-UNNAMED \
-    --add-opens=java.base/java.nio=ALL-UNNAMED \
-    --add-opens=java.base/java.util=ALL-UNNAMED \
-    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
-    --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED \
-    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
-    --add-opens=java.base/sun.nio.cs=ALL-UNNAMED \
-    --add-opens=java.base/sun.security.action=ALL-UNNAMED \
-    --add-opens=java.base/sun.util.calendar=ALL-UNNAMED \
-    --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED \
-    -jar ./target/NPLBM-1.0-jar-with-dependencies.jar
-
-
-   # scala -J-Xmx16g ./target/NPLBM-1.0-jar-with-dependencies.jar
+scala -J-Xmx16g ./target/BiTM-1.0-jar-with-dependencies.jar
